--- a/FrontendCnab/src/app/upload/upload.component.scss
+++ b/FrontendCnab/src/app/upload/upload.component.scss
@@ -32,6 +32,8 @@ h2 {
   margin-right: 0;
 }
 
+/* Estilização de botão 'upload' */
+
 .file {
   position: relative;
   display: flex;
@@ -40,8 +42,8 @@ h2 {
   width: 100%;
 }
 
-.file > input[type='file'] {
-  display: none
+.file > input[type="file"] {
+  display: none;
 }
 
 .file > label {
@@ -65,7 +67,6 @@ h2 {
   align-items: center;
   width: 90%;
   transition: box-shadow 0.3s, transform 0.3s; /* Transições suaves para a sombra e o tamanho */
-
 }
 
 .file > label:hover {
@@ -73,7 +74,6 @@ h2 {
   border-width: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adiciona uma sombra suave */
   transform: scale(1.01); /* Aumenta ligeiramente o tamanho do botão */
-
 }
 
 .file > label:active {
@@ -166,22 +166,21 @@ h2 {
   }
 }
 
-
-/* core styles for table */
-table{
-  width:100%;
+/* ** Estilização do table */
+table {
+  width: 100%;
   table-layout: fixed;
 }
-.tbl-header{
-  background-color: rgba(255,255,255,0.3);
- }
-.tbl-content{
-  height:300px;
-  overflow-x:auto;
-  margin-top: 0px;
-  border: 1px solid rgba(255,255,255,0.3);
+.tbl-header {
+  background-color: rgba(255, 255, 255, 0.3);
 }
-th{
+.tbl-content {
+  height: 300px;
+  overflow-x: auto;
+  margin-top: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+th {
   padding: 20px 15px;
   text-align: left;
   font-weight: 500;
@@ -189,12 +188,12 @@ th{
   color: #485b6d;
   text-transform: uppercase;
 }
-td{
+td {
   padding: 15px;
   text-align: left;
-  vertical-align:middle;
+  vertical-align: middle;
   font-weight: 300;
   font-size: 12px;
   color: #40444d;
-  border-bottom: solid 1px rgba(255,255,255,0.1);
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
